# paper-manager

./: LICENSE  README.md
paper-manager-backend/: .env  .env.example  .gitignore  EXTREME_SIMPLE_CONFIG_SUCCESS.md  README.md  a.md  openapi.json  pyproject.toml  requirements.txt
paper-manager-backend/app/: main.py
paper-manager-backend/app/api/: __init__.py  category.py  journal.py  paper.py  reference.py  reference_category.py  team.py  user.py
paper-manager-backend/app/core/: config.py  config_dev.py  database.py  dependencies.py
paper-manager-backend/app/models/: __init__.py  author.py  category.py  journal.py  keyword.py  paper.py  reference.py  team.py  user.py
paper-manager-backend/app/schemas/: category.py  paper.py  user.py
paper-manager-backend/app/services/: utils.py
paper-manager-backend/app/utils/: create_admin.py
paper-manager-backend/docs/: ADMIN_TOOLS_GUIDE.md  MIGRATION_TO_SQLITE.md
paper-manager-backend/scripts/: create_admin.py
paper-manager-frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
paper-manager-frontend/docs/: css-architecture.md  form-validation-guide.md  openapi.json  unified-page-layout.md
paper-manager-frontend/src/: App.vue  main.js
paper-manager-frontend/src/assets/: base.css  main.css
paper-manager-frontend/src/components/: CategoryNode.vue  CategoryTree.vue  CollaborationNetwork.vue  CollaborationNetworkModal.vue  ConfirmDialog.vue  ErrorBoundary.vue  LoadingSpinner.vue  LoginForm.vue  Modal.vue  PageLayout.vue  PaperCard.vue  PaperDetail.vue  PaperForm.vue  index.js  (+16 more)
(+113 files in other folders)
