[project]
name = "paper-manager-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "sqlmodel>=0.0.24",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "colorama>=0.4.6",
    "pandas>=2.3.0",
    "openpyxl>=3.1.5",
]
